fix(fe): network tab icon alignment, info tooltip positioning, chart tooltip clipping

--- a/src/controllers/statsPages/networkStatsPage/_networkStats.scss
+++ b/src/controllers/statsPages/networkStatsPage/_networkStats.scss
@@ -158,7 +158,6 @@
 .collateral-status {
 
     .info-label {
-        height: 22px;
         margin-left: 5px;
     }
 
@@ -167,10 +166,10 @@
     }
 
     .info-label--icon {
-        width: 22px;
-        height: 22px;
-        margin-left: 0;
-        margin-top: 0;
+        //width: 22px;
+        //height: 22px;
+        //margin-left: 0;
+        //margin-top: 0;
     }
 }
 
@@ -397,20 +396,19 @@
 }
 
 .collateral-table--row--right {
-
-    &,
-    >span {
-        font-family: "Courier New", Courier, monospace;
-        text-align: right;
-    }
-
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     font-weight: 500;
     font-size: 12px;
     line-height: 29px;
     letter-spacing: 1.5px;
     color: #FFFFFF;
+
+    &,
+    >span {
+        font-family: "Courier New", Courier, monospace;
+    }
 }
 
 .collateral-table--row+.collateral-table--row {
@@ -557,11 +555,3 @@
         display: none;
     }
 }
-
-// .highcharts-container {
-//     max-width: 100%;
-
-//     svg {
-//         max-width: 100%;
-//     }
-// }
